--- a/app/views/compromises/_form.html.erb
+++ b/app/views/compromises/_form.html.erb
@@ -50,6 +50,7 @@
   <div class="row">
     <div class="large-12 column text-center">
       <%= link_to 'Atras', compromises_path ,class: 'button verde-bg'  %>
+      &nbsp;
       <%= f.submit 'Guardar' , class: 'button verde-bg' %>  
     </div>
   </div>
