--- a/app/views/entities/edit.html.erb
+++ b/app/views/entities/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing entity</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">EDITANDO TIPO DE ENTIDAD</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Show', @entity %> |
-<%= link_to 'Back', entities_path %>
