--- a/app/views/interests/edit.html.erb
+++ b/app/views/interests/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing interest</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">EDITANDO TEMA DE INTERÉS</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Show', @interest %> |
-<%= link_to 'Back', interests_path %>
