--- a/app/views/temasregulatorios/index.html.erb
+++ b/app/views/temasregulatorios/index.html.erb
@@ -1,12 +1,28 @@
-<h1>Listing temasregulatorios</h1>
+<div class="row">
+  <div class="large-6 column">
+    <h2 class="azul">
+      TEMAS REGULATORIOS
+    </h2>      
+  </div>
+  <div class="large-6 column text-right">
+    <%= link_to (image_tag 'crear_nuevo2.png'), new_temasregulatorio_path %>
+    &nbsp;&nbsp;&nbsp;
+    <%= link_to (image_tag 'imprimir2.png'), '/temasregulatorios.pdf' , target: '_blank'%>
+    
+  </div>
+</div>
+<hr class="linea">
 
-<table>
-  <thead>
+<table id="buscar" cellspacing="0" width="100%">
+  <thead class="head-tabla">
     <tr>
       <th>Titulo</th>
       <th>Resumen</th>
       <th>Stakeholder</th>
-      <th colspan="4"></th>
+      <th>Archivo</th>
+      <th>PDF</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
     </tr>
   </thead>
 
@@ -17,14 +33,25 @@
         <td><%= temasregulatorio.resumen %></td>
         <td><%= temasregulatorio.stakeholder.nombre %></td>
         <td><%= link_to 'Archivo', temasregulatorio.imagen_url %></td>
-        <td><%= link_to 'Show', temasregulatorio %></td>
-        <td><%= link_to 'Edit', edit_temasregulatorio_path(temasregulatorio) %></td>
-        <td><%= link_to 'Destroy', temasregulatorio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (image_tag 'imprimir_pequeno.png'), '/temasregulatorios/'+temasregulatorio.id.to_s+'.pdf' , target: "_blank" %></td>
+        <td><%= link_to (image_tag 'editar_1.png'), edit_temasregulatorio_path(temasregulatorio) %></td>
+        <td><%= link_to (image_tag 'eliminar_1.png'), temasregulatorio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<br>
+<br>
+<br>
 <br>
 
-<%= link_to (image_tag 'crear_nuevo2.png'), new_temasregulatorio_path %>
+<hr class="linea">
+
+<script type="text/javascript" >
+  $(document).ready(function(){
+    $('#buscar').dataTable({
+      "paging":   false,
+        "info":     false
+    });
+  });
+</script>
