--- a/app/views/temasregulatorios/new.html.erb
+++ b/app/views/temasregulatorios/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New temasregulatorio</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">CREANDO UN TEMA REGULATORIO</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Back', temasregulatorios_path %>
