--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -1,10 +1,22 @@
-<h1>Listing entities</h1>
+<div class="row">
+  <div class="large-6 column">
+    <h2 class="azul">
+      TIPOS DE ENTIDAD
+    </h2>      
+  </div>
+  <div class="large-6 column text-right">
+    <%= link_to (image_tag 'crear_nuevo2.png'), new_entity_path %>   
+  </div>
+</div>
+<hr class="linea">
 
-<table>
-  <thead>
+<table id="buscar" cellspacing="0" width="100%">
+  <thead class="head-tabla">
     <tr>
       <th>Nombre</th>
-      <th colspan="3"></th>
+      <th>Ver</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
     </tr>
   </thead>
 
@@ -12,14 +24,25 @@
     <% @entities.each do |entity| %>
       <tr>
         <td><%= entity.nombre %></td>
-        <td><%= link_to 'Show', entity %></td>
-        <td><%= link_to 'Edit', edit_entity_path(entity) %></td>
-        <td><%= link_to 'Destroy', entity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (image_tag 'imprimir_pequeno.png'), entity %></td>
+        <td><%= link_to (image_tag 'editar_1.png'), edit_entity_path(entity) %></td>
+        <td><%= link_to (image_tag 'eliminar_1.png'), entity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<br>
+<br>
+<br>
 <br>
 
-<%= link_to (image_tag 'crear_nuevo2.png'), new_entity_path %>
+<hr class="linea">
+
+<script type="text/javascript" >
+  $(document).ready(function(){
+    $('#buscar').dataTable({
+      "paging":   false,
+        "info":     false
+    });
+  });
+</script>
