--- a/app/views/interests/new.html.erb
+++ b/app/views/interests/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New interest</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">CREANDO UN TEMA DE INTERÉS</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Back', interests_path %>
