--- a/app/views/mettings/edit.html.erb
+++ b/app/views/mettings/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing metting</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">EDITANDO REUNIÓN</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Show', @metting %> |
-<%= link_to 'Back', mettings_path %>
