--- a/app/views/stakeholders/index.html.erb
+++ b/app/views/stakeholders/index.html.erb
@@ -1,7 +1,18 @@
-<h1>Stakeholders</h1>
+<div class="row">
+  <div class="large-6 column">
+    <h2 class="azul">
+      STAKEHOLDERS
+    </h2>      
+  </div>
+  <div class="large-6 column text-right">
+    <%= link_to (image_tag 'crear_nuevo2.png'), new_stakeholder_path %>
+    
+  </div>
+</div>
+<hr class="linea">
 
-<table>
-  <thead>
+<table id="buscar" cellspacing="0" width="100%">
+  <thead class="head-tabla">
     <tr>
       <th>Imagen</th>
       <th>Nombre</th>
@@ -11,7 +22,9 @@
       <th>Tipo de entidad</th>
       <th>Pais</th>
       <th>Impacto</th>
-      <th colspan="3"></th>
+      <th>PDF</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
     </tr>
   </thead>
 
@@ -26,16 +39,25 @@
         <td><%= stakeholder.entity ? stakeholder.entity.nombre : ''  %></td>
         <td><%= stakeholder.pais %></td>
         <td><%= stakeholder.impacto %></td>
-        <td><%= link_to 'Show', stakeholder %></td>
-        <td><%= link_to 'Edit', edit_stakeholder_path(stakeholder) %></td>
-        <td><%= link_to 'Destroy', stakeholder, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (image_tag 'imprimir_pequeno.png'), '/stakeholders/'+stakeholder.id.to_s+'.pdf' , target: "_blank" %></td>
+        <td><%= link_to (image_tag 'editar_1.png'), edit_stakeholder_path(stakeholder) %></td>
+        <td><%= link_to (image_tag 'eliminar_1.png'), stakeholder, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<br>
+<br>
+<br>
 <br>
 
-<%= link_to (image_tag 'crear_nuevo2.png'), new_stakeholder_path %>
+<hr class="linea">
 
-
+<script type="text/javascript" >
+  $(document).ready(function(){
+    $('#buscar').dataTable({
+      "paging":   false,
+        "info":     false
+    });
+  });
+</script>
