--- a/app/views/temasregulatorios/_form.html.erb
+++ b/app/views/temasregulatorios/_form.html.erb
@@ -11,23 +11,45 @@
     </div>
   <% end %>
   
-  <div class="field">
-    <%= f.label :titulo %><br>
-    <%= f.text_field :titulo %>
+  <div class="row">
+    <div class="large-6 columns">
+      <div class="field">
+        <%= f.label :titulo %><br>
+        <%= f.text_field :titulo %>
+      </div>
+    </div>
+    <div class="large-6 columns">
+      <div class="field">
+        <%= f.label :stakeholder_id %><br>
+        <%= collection_select(:temasregulatorio, :stakeholder_id, current_user.empresa.stakeholders.all.uniq!, :id, :nombre_completo,{prompt: 'Seleciona el stakeholder'} , required: '')%>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :resumen %><br>
-    <%= f.text_area :resumen %>
+
+
+  <div class="row">
+    <div class="large-12 column">
+      <div class="titulo-editar text-center">
+        <h5 class="blanco">Resumen</h5>
+      </div>
+      <%= text_area( :temasregulatorio , :resumen , size: "10x10") %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :imagen %><br>
-    <%= f.file_field :imagen %>
+
+  <div class="row">
+    <div class="large-12 columns">
+      <div class="field">
+        <%= f.label :imagen %><br>
+        <%= f.file_field :imagen %>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :stakeholder_id %><br>
-    <%= collection_select(:temasregulatorio, :stakeholder_id, current_user.empresa.stakeholders.all.uniq!, :id, :nombre_completo,{prompt: 'Seleciona el stakeholder'} , required: '')%>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  
+  <div class="row">
+    <div class="large-12 column text-center">
+      <%= link_to 'Atras', temasregulatorios_path ,class: 'button verde-bg'  %>
+      &nbsp;
+      <%= f.submit 'Guardar' , class: 'button verde-bg' %>  
+    </div>
   </div>
 <% end %>
