--- a/app/views/temasregulatorios/edit.html.erb
+++ b/app/views/temasregulatorios/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing temasregulatorio</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">EDITANDO TEMA REGULATORIO</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Show', @temasregulatorio %> |
-<%= link_to 'Back', temasregulatorios_path %>
