--- a/app/views/usuarios/_form.html.haml
+++ b/app/views/usuarios/_form.html.haml
@@ -35,5 +35,6 @@
   .field
     = f.label 'Usuario'
     = f.text_field :username
-  .actions
-    = f.submit
+  .row
+    .large-12.colmun.text-center
+      = f.submit 'Guardar', class: 'button verde-bg'
