se arreglo visualizacion

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,12 @@
         <%= render 'layouts/imagen_empresa' %>
         <%= render 'layouts/menu' %>
     	<% end %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <p class="notice">
+        <%= notice %>
+      </p>
+      <p class="alert">
+        <%= alert %>
+      </p>
     	<%= yield %>
     </div>
 
