--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -79,7 +79,7 @@ body{
 	position: absolute;
 	top: 0;
 	background: rgba(51,51,51,0.9);
-	padding: 20px;
+	padding: 0 20px 20px 20px;
 	height: 100%;
 	z-index: 10;
 	overflow: auto;
