--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -13,7 +13,8 @@
 
   <div class="row">
     <div class="large-4 columns">
-      <input type="checkbox"> &nbsp;Habilitado<br>
+      <%= f.check_box :habilidato %> &nbsp; Habilitado <br>
+      
         <% if @empresa.imagen_url %>
           <div class="roundLabel">
             <%= image_tag @empresa.imagen_url, class: 'imagen' %>  
