--- a/app/views/stakeholders/edit.html.erb
+++ b/app/views/stakeholders/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing stakeholder</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @stakeholder %> |
-<%= link_to 'Back', stakeholders_path %>
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">EDITANDO STAKEHOLDER</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
+<%= render 'identificacion' %>
