--- a/app/views/stakeholders/new.html.erb
+++ b/app/views/stakeholders/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New stakeholder</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">CREANDO UN STAKEHOLDER</h4>
+	</div>
+</div>
+<hr class="linea">
+<br>
+<br>
 <%= render 'identificacion' %>
-
-<%= link_to 'Back', stakeholders_path %>
