--- a/app/views/stakeholders/_influencia.html.haml
+++ b/app/views/stakeholders/_influencia.html.haml
@@ -9,26 +9,52 @@
 				= message
 
 	.row
-		.large-4.columns
-			%h6
-				Influencia
+		.large-4.columns#influencia
+			= f.label :influencia
+			- Influence.all.each do |influ|
+				.row
+					%div{ class: ['large-12','columns','imageChecked','text-center', (@stakeholder.influences.include?(influ) ? "botonIdentificacionChecked" : "botonIdentificacionUnchecked") ], :"data-id" => influ.id}
+						%h5.blanco
+							= influ.nombre
+			
 		.large-4.columns
 
-		.large-4.columns
-			%h6
-				Relevancia
-
+		.large-4.columns#relevancia
+			= f.label :relevancia
+			- Relevance.all.each do |rele|
+				.row
+					= check_box_tag("Relevance[#{rele.id}]",1,@stakeholder.relevances.include?(rele))
+					%label
+						= rele.nombre
+					%br	
+			-#
+				.row
+					%div{ class: ['large-12','columns','imageChecked','text-center', (@stakeholder.relevances.include?(rele) ? "botonIdentificacionChecked" : "botonIdentificacionUnchecked") ], :"data-id" => rele.id}
+						%h5.blanco
+							= rele.nombre
 	.row
-		.large-4.columns
-			= f.label :necesidades_logro
-			= f.text_field :necesidades_logro
-		.large-4.columns
-			= f.label :necesidades_poder
-			= f.text_field :necesidades_poder
-		.large-4.columns
-			= f.label :necesidades_afiliacion
-			= f.text_field :necesidades_afiliacion
+		.row
+			.large-4.columns.titulo.text-center
+				%h5.blanco
+					NECESIDADES DE LOGRO
+			.large-4.columns.titulo.text-center			
+				%h5.blanco	
+					NECESIDADES DE PODER
+			.large-4.columns.titulo.text-center
+				%h5.blanco
+					NECESIDADES DE AFILIACIÓN
+		.row
+			.large-4.columns.necesidades
+				= f.text_field :necesidades_logro, class: 'text_field_nec text-center'
+			.large-4.columns.necesidades
+				= f.text_field :necesidades_poder, class: 'text_field_nec text-center'
+			.large-4.columns.necesidades
+				= f.text_field :necesidades_afiliacion, class: 'text_field_nec text-center'
 
+
+
+	= f.hidden_field :influencia, value:'a' #value: @stakeholder.influencia
+	= f.hidden_field :relevancia, value:'a' #value: @stakeholder.relevancia
 	.row
 		.large-12.columns.text-center
 			= f.submit 'Siguiente', class: 'button verde-bg'
