--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -11,6 +11,10 @@ body{
 	color: #898989;
 }
 
+.gris-oscuro{
+	color: #666666;
+}
+
 .verde{
 	color: #6FA361;
 }
@@ -23,6 +27,15 @@ body{
 	background: #6FA361;
 }
 
+.gris-claro-bg{
+	background: #f2f2f2;
+}
+
+.gris-oscuro-bg{
+	background: #e6e6e6;
+}
+
+
 .verde-bg:hover{
 	background: #6FA361;
 }
@@ -31,6 +44,10 @@ body{
 	border: 0;
 	border-top: 1px solid #eeeeee;
 	border-bottom: 1px solid #ffffff;
+}
+
+.bold{
+	font-weight: bold;
 }
 
 .imagen{
