--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,70 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main_image{
+	height: 600px;
+	width: auto;
+	background: url('img-inicio-2.jpg');
+	background-size: 100%;
+	background-position: 50% 53%;
+	padding: 4% 0 0 0;
+}
+
+.contenedor{
+	width: 100%;
+	margin: 70px 0;
+}
+
+.texto-quienes{
+	word-spacing: 5px;
+	text-align: justify;
+	line-height: 125%;
+	font-size: 20px;
+}
+
+.title-quienes{
+	margin: 170px 0 0 0;
+}
+
+.servicios{
+	background: #6fa361;
+	padding: 100px 0;
+}
+
+.title-servicios{
+	margin-bottom: 10%;
+}
+
+.contenedor-especial{
+	padding: 11% 0;
+}
+
+.text-equipo{
+	padding-right: 40px;
+}
+
+.title-equipo{
+	padding-top: 60px;
+	padding-left: 40px;
+	padding-bottom: 123px;
+}
+
+
+.texto-gerente{
+	margin-top: 50px;
+}
+
+.footer{
+	background: #666666;
+	padding: 20px 0;
+
+	a{
+		color: white;
+	}
+}
+
+.footer-cmc{
+	padding: 10px 0;
+	background: #4d4d4d ;
+}
